Made several changes: Added urls for linkedin and github, added chart for skills, added text for intro and text for resume details.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@popperjs/core": "^2.10.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "chart.js": "^4.2.1",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
