--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "chart.js": "^4.2.1",
+    "jquery": "^3.6.3",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
